syntax = "proto3";
package bff;

option go_package = "bff/;bffpb";

//************************** 现金SOLO赛 **************************/

enum CashBattleStatus{
  BATTLE_NONE = 0;//未开放
  BATTLE_SIGN = 1;//报名期
  BATTLE_SIGN_END = 2;//报名截至
  BATTLE_GUESSING = 3;//竞猜期
  BATTLE_GET_READY = 4;//选手准备期
  BATTLE_BATTLING = 5;//比赛期
  BATTLE_IDLE = 6;//等待期 休整期
  BATTLE_END = 7;//赛事结束
}



//获取现金赛信息
message C2SGetCashBattle{
  string language = 1;//客户端用的语言
}

//现金赛信息返回
message S2CGetCashBattle{
  CashBattleStatus status = 1;
  int64  state_finish_time = 2;//阶段结束时间戳 秒 不知道的时候为0
  bool is_joiner = 3;//是否报名
  bool is_player = 4;//是否入选比赛
  int32 join_num = 5;//报名人数/竞猜人数
  int32 role_id = 6;//选中角色ID
  CashBattleInfo info = 7;//赛事信息
  map<int64, int64> stake = 8;//自己竞猜信息 key:押注玩家ID value:押注钻石数量
  bool is_lock = 9;//当前英雄是否锁定
}

//获取现金赛对战表
message C2SGetCashBattleVersus{
  string language = 1;//客户端用的语言
}

message S2CGetCashBattleVersus{
  string title = 1;//标题
  repeated CashBattleVersus battle_versus = 2;//对战表
}

//报名参赛
message C2SCashBattleJoin{

}

//报名参赛返回
message S2CCashBattleJoin{
  int32 ret_code = 1;//同error_code
}

//参与竞猜
message C2SGetCashBattleGuess{
  int64 player_id = 1;//竞猜的玩家ID
  int64 stake_value = 2;//下注额
}

//参与竞猜返回
message S2CGetCashBattleGuess{
  int64 player_id = 1;//竞猜的玩家ID
  int64 total_stake_value = 2;//下注该玩家的总下注额
  CashBattleVersus battle_versus = 3;//对战表
}

//进入赛场
message C2SCashBattleEnter{

}

//进入赛场
message S2CCashBattleEnter{
  int64 battle_time = 1;//开赛时间戳 秒
}

//选定英雄
message C2SCaseBattleSelectHero{
  int32 hero_id = 1;//选定的英雄ID
  bool lock = 2;//是否锁定 true 锁定 false解锁
}

//选定英雄返回
message S2CCaseBattleSelectHero{
  int32 hero_id = 1;//选定的英雄ID
  bool lock = 2;//是否锁定 true 锁定 false解锁
}

//通知进入选手准备期
message NtfCashBattleReady{
  int64 battle_time = 1;//开赛时间戳 秒
}

//进入战斗场景
message C2SCashBattleStart{

}

//进入战斗场景
message S2CCashBattleStart{
  int32 ret_code = 1;
}

//赛事信息
message CashBattleInfo{
  string title = 1;//标题
  string content = 2;//活动简介
  int32 medal_num = 3;//报名条件 奖杯数
  int32 hero_num = 4;//报名条件 英雄数
  int32 pet_num = 5;//报名条件  宠物数量
  int32 item_id = 6;//报名条件 道具ID
  int32 item_num = 7;//报名条件 道具数量
  string condition = 8;//活动报名条件文字描述
}

message CashBattleVersus{
  string uid = 1;//对战信息唯一ID
  CashBattlePlayer left_player = 2;//左侧玩家信息
  CashBattlePlayer right_player = 3;//右侧玩家信息
  bool is_fighting = 4;// bool 是否战斗中
  int64 winner_id = 5;//获胜者ID
}

//参赛者信息
message CashBattlePlayer{
  int64 player_id = 1;//玩家id
  string player_icon = 2;//玩家头像
  string player_nick = 3;//玩家昵称
  int64 stake_value = 4;//竞猜钻石数
}

//观战打赏
message C2SCashBattleGratuity{
  int64  player_id = 1;//要打赏的玩家id
  int64 gold = 2;//要打赏的金币数
}

message S2CCashBattleGratuity{
  int64  player_id = 1;//要打赏的玩家id
  int64 gold = 2;//打赏的金币数
}